<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         android:visibility="visible">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="10"
            android:orientation="vertical"

            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center"
        >
            <TextView
                    android:text="@string/title_main_professional"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/textView"


                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
        >


            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:textSize="20sp"
                    android:hint="@string/firstname_professionnelle"
                    android:id="@+id/fname_professionnelle" android:autofillHints=""/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
        >

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textSize="20sp"
                    android:hint="@string/name_professionnelle"
                    android:inputType="textPersonName"
                    android:id="@+id/name_professionnelle" android:autofillHints=""/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
        >


            <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="wrap_content"
                    android:ems="10"
                    android:layout_height="wrap_content"
                    android:dropDownWidth="wrap_content" tools:ignore="DuplicateIds" android:autofillHints=""/>


        </LinearLayout>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
        >

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:textSize="20sp"
                    android:hint="@string/pass_professionnelle"
                    android:id="@+id/pass_professionnelle" android:autofillHints=""/>

        </LinearLayout>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:id="@+id/linear_identity"
                android:visibility="gone">

            <Button
                    android:text="@string/send_professionnelle_identity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:id="@+id/send_button_professionnelle_identity"
                    android:layout_gravity="center"
                    tools:ignore="NestedWeights" android:visibility="visible"/>


        </LinearLayout>


        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="0dp"
                      android:layout_weight="2"
                      android:gravity="center"
        >
            <Button
                    android:text="@string/send_professionnelle_information"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:id="@+id/send_button_professionnelle_information"
                    android:layout_gravity="center"
                    tools:ignore="NestedWeights"
                    android:visibility="visible"
            />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>